Fix layout bugs in wallets dashboard

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,3 +34,8 @@
 .text-center {
   text-align: center;
 }
+
+.table-btn-margin {
+  margin-bottom: 15px;
+}
+
