--- a/src/app/pages/wallet-dashboard/wallet-dashboard.component.css
+++ b/src/app/pages/wallet-dashboard/wallet-dashboard.component.css
@@ -11,3 +11,8 @@
 .icon-clickable {
   cursor: pointer;
 }
+
+.wallet-table-container {
+  overflow: auto;
+  max-width: 100%;
+}
